# airtable-db-export

./: .gitignore  README.md  pyproject.toml  readthedocs.yaml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: README.md  requirements.txt
docs/source/: airtable.rst  cli.rst  conf.py  configuration.rst  example.rst  index.rst  install.rst  license.rst
src/airtable_db_export/: at.py  db.py  main.py  utils.py
tests/: conftest.py  test_at.py  test_cli.py  test_config.py  test_utils.py
tests/sample_data/: multiLineText.json  multipleLookupValues.json  multipleRecordLinks.json  multipleSelects.json  richText.json  singleLineText.json  singleRecordLink.json  singleSelect.json
