[project]
name = "airtable-db-export"
version = "0.2.1"
description = "Download data from Airtable to a SQL database."
readme = "README.md"
authors = [{ name = "Steve Ivy", email = "steveivy@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.3.0",
    "pandas>=2.2.3",
    "pyairtable>=3.1.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "toml>=0.10.2",
]

[project.scripts]
adbe = "airtable_db_export.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
